# pygbm_package

./: LICENSE  README.md  debug_import.py  how to run package t.txt  pyproject.toml  setup.py
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pygbm/: base.py  cli.py  geometric_brownian_motion.py  launch_script.py
pygbm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pygbm/GBM/: GBM.py  __init__.py  launch_script.py
