[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "pygbm" # name of the package must match the core folder name
dynamic = ["version"]
description = "A Python package for generating geometric Brownian motion paths."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Patric", email = "pmwd2@cam.ac.uk" },
    ]
keywords = ["browian"]
classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Economists, Physsicists",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",    
    "matplotlib",
]

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/yourusername/companies_package"
"Issues" = "https://github.com/yourusername/companies_package/issues"


[tool.setuptools_scm]
write_to = "pygbm/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["."]


[project.scripts]
pygbm = "pygbm.cli:cli"